library updated